Fix bugs on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3469,7 +3469,7 @@ input, select, textarea {
 				}
 
 				#intro .actions {
-					display: none;
+					/* display: none; */
 				}
 
 		}
